[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Objects/HUD.gd" type="Script" id=1]

[node name="HUD" type="Node2D"]
script = ExtResource( 1 )

[node name="TimeLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Time:"

[node name="ScoreLabel" type="Label" parent="."]
margin_top = 25.0
margin_right = 40.0
margin_bottom = 39.0
text = "Score:"

[node name="RingLabel" type="Label" parent="."]
margin_top = 50.0
margin_right = 40.0
margin_bottom = 64.0
text = "Rings:"

[node name="LivesLabel" type="Label" parent="."]
margin_top = 585.0
margin_right = 40.0
margin_bottom = 599.0
text = "Lives:"
